# Win-siphonClaudeUsage

./: .code-review-graphignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  benchmark-trayIcon.js  electron-builder.yml  eslint.config.js  package-lock.json  package.json  patch-update.cjs  pr_description.md  skills-lock.json  submit.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: ci.yml  winget-publish.yml
.jules/: sentinel.md
assets/installer/: installer.nsh
docs/: api-and-data.md  code-signing-policy.md  privacy-policy.md
scripts/: after-build.cjs  check-syntax.js  pack-release.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/siphon-core/: Cargo.toml
src-tauri/crates/siphon-core/src/: alerts.rs  diagnostics.rs  format.rs  i18n.rs  json_store.rs  lib.rs  local_data.rs  oauth.rs  preferences.rs  pricing.rs  profile.rs  quota.rs  reset_scheduler.rs  security.rs  state.rs  token.rs  tray_status.rs  updater.rs
src-tauri/src/: claude_settings.rs  commands.rs  controller.rs  floating.rs  http.rs  main.rs  notify.rs  prefs.rs  token_store.rs  tray.rs  update_check.rs  updater_bin.rs  windows_ctl.rs
src/main/: appIcon.js  appLifecycle.js  claudeSettingsService.js  floatingWindow.js  jsonStore.js  localDataService.js  main.js  oauthService.js  preferencesService.js  preload.cjs  profileService.js  quotaService.js  resetNotificationScheduler.js  security.js  startupService.js  tokenLifecycle.js  tokenStore.js  trayIcon.js  updateService.js  usageAlerts.js  usageController.js
src/renderer/: dotMatrix.js  floating.html  floating.js  index.html  renderer.js  (+3 more)
test/: appIcon.test.js  appLifecycle.test.js  claudeSettingsService.test.js  diagnostics.test.js  floatingWindow.test.js  format.test.js  helpers.js  i18n.test.js  jsonStore.test.js  localDataService.test.js  main.test.js  oauthService.test.js  pace.test.js  peakHours.test.js  preferencesService.test.js  profileService.test.js  quota.test.js  quotaService.test.js  rendererViewState.test.js  resetCopy.test.js  resetNotificationScheduler.test.js  security.test.js  startupService.test.js  tokenStore.test.js  trayIcon.test.js  trayStatus.test.js  updateService.test.js  usageAlerts.test.js  usageControllerPreferences.test.js  usageControllerProfile.test.js
(+15 files in other folders)
